<resources>
    <string name="app_name">KeyReception</string>
    <string name="app_wel">Welcome to</string>
    <string name="app_Keyrec">Key Reception</string>
    <string name="google_place_api">AIzaSyB20iWo0NdlMyRoEVEZaTmi_mQwy3PWssw</string>
    <string name="app_Own">Owner</string>
    <string name="app_rec">Receptionist</string>
    <string name="app_sign">Sign in to access your account</string>
    <string name="app_selectut">Select your login profile to continue with KeyReception</string>
    <string name="credit_card">Credit Card</string>
    <string name="use_new_card">ADD NEW CARD</string>
    <string name="card_type">Card Type</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="security_code">Security Code</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="billing_zip_code">Billing Zip Code</string>
    <string name="save_card_future">Save card detail</string>
    <string name="expiry_date">Expire Date</string>
    <string name="cvv_code">Cvv Code</string>
    <string name="sk_test">sk_test_FmpQyFD9mv8urIP3jt4NXts000JzroVWiq</string>
    <string name="welcomeText">Welcome to</string>
    <string name="f_n">First Name</string>
    <string name="l_n">Last Name</string>
    <string name="company">Company Name</string>
    <string name="category">Category</string>
    <string name="selectcategory">Select Category</string>
    <string name="hoursText">HOUR LABORS</string>
    <string name="emailTextHint">Email</string>
    <string name="uname">Full name</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="emailadd">Email Address</string>
    <string name="already">Already have an account?</string>
    <string name="account">Create Your Account</string>
    <string name="filltext">Fill the details for create account</string>
    <string name="passwordTextHint">Password</string>
    <string name="CategoryTextHint">Category</string>
    <string name="rememberText">Remember me</string>
    <string name="forgetText">Forgot Password?</string>
    <string name="forgetlargeText">Please enter your registered email address below to reset your password.</string>
    <string name="forgethead">Forgot Password</string>
    <string name="signText">Sign In</string>
    <string name="send">Send</string>
    <string name="orText">OR</string>
    <string name="accountText">Don\'t have an account ?</string>
    <string name="signUpText">Sign Up</string>
    <string name="updateprofile">Update Profile</string>
    <string name="update">Update</string>
    <string name="socialnumber">Social Security Number</string>
    <string name="number">Enter Number</string>
    <string name="or">OR</string>
    <string name="and">AND</string>
    <string name="vya">Validate Your Account</string>
    <string name="dlicense">Driver License</string>
    <string name="sub">Submit</string>
    <string name="validate">Please validate your account below</string>
    <string name="validate1">In order to validate your account please submit any the document listed below</string>
    <string name="last_name">Last Name</string>
    <string name="firstNameEmptyError">Please enter User name</string>
    <string name="cnumEmptyError">Please enter card number</string>
    <string name="edateEmptyError">Please enter expire date</string>
    <string name="cvvNameEmptyError">Please enter cvv code</string>
    <string name="lastNameEmptyError">Please enter last name</string>
    <string name="firstNameLengthError">first name is too short (minimum 3 characters)</string>
    <string name="lastNameLengthError">last name is too short (minimum 3 characters)</string>
    <string name="emailEmptyError">Please enter email</string>
    <string name="emailInvalidError">Invalid email</string>
    <string name="passEmptyError">Please enter password</string>
    <string name="passspace">Please don\'t enter space</string>
    <string name="opassEmptyError">Please enter old password</string>
    <string name="npassEmptyError">Please enter new password</string>
    <string name="cpassEmptyError">Please enter confirm password</string>
    <string name="passLengthError">Password is too short (minimum 6 characters)</string>
    <string name="coNameEmptyError">Please enter Property name</string>
    <string name="categoryEmptyError">Please select category</string>
    <string name="snEmptyError">Please enter social number</string>
    <string name="ssnEmptyError">Please enter social security number</string>
    <string name="dlEmptyError">Please choose driver licence</string>
    <string name="addNameEmptyError">Please enter address</string>
    <string name="ratingEmptyError">Please select rating</string>
    <string name="reviewEmptyError">Please enter review</string>
    <string name="Lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aFirstNameEmptyError">Please enter account holder first name</string>
    <string name="aLastNameEmptyError">Please enter account holder last name</string>
    <string name="aRoutingEmptyError">Please enter account holder routing number</string>
    <string name="aNumberEmptyError">Please enter account holder account number</string>
    <string name="faq">FAQ\'s</string>
    <string name="help">Help</string>
    <string name="Setting">Setting</string>
    <string name="Settings">Settings</string>
    <string name="vyasmall">Validate your account</string>
    <string name="profile">My Profile</string>
    <string name="service">Service</string>
    <string name="services">Services</string>
    <string name="linacc">Linked Account</string>
    <string name="paymethod">Payment Method</string>
    <string name="switchrece">Receptionist</string>
    <string name="appo">Appointment</string>
    <string name="reserv">Reservation</string>
    <string name="myjob">My Job</string>
    <string name="mess">Messages</string>
    <string name="earn">Earning</string>
    <string name="not">Notifications</string>
    <string name="noti">Notification</string>
    <string name="pay_opt">Payment Option</string>
    <string name="up_doc">Upload Document</string>
    <string name="chan_pass">Change Password</string>
    <string name="abo_us">About us</string>
    <string name="term_con">Terms &amp; Conditions</string>
    <string name="pri_pol">Privacy Policy</string>
    <string name="log">Logout</string>
    <string name="cin">Check-in</string>
    <string name="cout">Check-out</string>
    <string name="subscrip">Subscription</string>
    <string name="veified">Verified</string>
    <string name="basic">Basic</string>
    <string name="subscrib">Subscribe</string>
    <string name="basictext">lorem ipsum dammy text...</string>
    <string name="detail">Details</string>
    <string name="corepro">Corevestor Property</string>
    <string name="info">Informations</string>
    <string name="psize">Property size</string>
    <string name="serdate">Service Date</string>
    <string name="servicess">Services</string>
    <string name="start">Start</string>
    <string name="des">Additional Information</string>
    <string name="assign">Assign Vendor</string>
    <string name="postby">Posted By</string>
    <string name="cstatus">Change Status</string>
    <string name="price">Price</string>
    <string name="pname">Property Name</string>
    <string name="paddress">Address</string>
    <string name="sproperty">Select Property</string>
    <string name="cproperty">Change Property</string>
    <string name="cstats">Change Status</string>
    <string name="givereview">Give Review</string>
    <string name="startservice">Start Service</string>
    <string name="inprogress">In Progress</string>
    <string name="endservice">End Service</string>
    <string name="bed">Bedroom</string>
    <string name="sel">Select</string>
    <string name="bath">Bathroom</string>
    <string name="cpost">Create Post</string>
    <string name="post">Post</string>
    <string name="newpass">New Password</string>
    <string name="oldpass">Old Password</string>
    <string name="changepass">Change Password</string>
    <string name="confirmpass">ConFirm Password</string>
    <string name="badd">Billing Address</string>
    <string name="eadd">Enter address</string>
    <string name="spaytype">Select Payment Option</string>
    <string name="paytype">Payment Type</string>
    <string name="payoption">Payment Option</string>
    <string name="pay">Pay</string>
    <string name="totamount">Total Amount</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="search">Search...</string>
    <string name="servicetext">There are many variations of passages of lorem ipsm available.</string>
    <string-array name="selectbadroom">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="selectbathroom">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="priceEmptyError">Please enter price</string>
    <string name="desEmptyError">Please enter Description</string>
    <string name="dateEmptyError">Please enter service date</string>
    <string name="psEmptyError">Please enter service property size</string>
    <string name="bedEmptyError">Please select bedroom</string>
    <string name="imageEmptyError">Please select upload image</string>
    <string name="bathEmptyError">Please select bathdroom</string>
    <string name="serEmptyError">Please select service</string>
    <string name="ptypeEmptyError">Please select payment type</string>
    <string name="spEmptyError">Please select property</string>
    <string name="pSizeInvalidError">Property size invalid</string>
    <string name="complete">Completed</string>
    <string name="paymentcomplete">Paid</string>
    <string name="paidcompleted">Complete and paid</string>
    <string name="nostart">Not Started</string>
    <string name="Pending">Pending</string>
    <string name="inpro">In Progress</string>
    <string name="confirm">Confirmed</string>
    <string name="nrf">No Record Found</string>
    <string name="feet">Sq Feet</string>
    <string name="paypal">Paypal</string>
    <string name="venmo">Venmo</string>
    <string name="credit">Credit Card</string>
    <string name="request">Request</string>
    <string name="timeout">Time Out</string>
    <string name="timeleft">Time Left</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="newappo">New Appointment</string>
    <string name="valid">Validate your account</string>
    <string name="payment">Payment</string>
    <string name="makepayment">Make Payment</string>
    <string name="review">Give Review</string>
    <string name="addprop">Add Property</string>
    <string name="updp">Update</string>
    <string name="updprop">Edit Property</string>
    <string name="uimg">Upload Image</string>
    <string name="title_sc">Select Category</string>
    <string name="title_sub">Submit</string>
    <string name="yes">Yes</string>
    <string name="days_ago">day ago</string>
    <string name="hours_ago">hour ago</string>
    <string name="minute_ago">min ago</string>
    <string name="second_ago">sec ago</string>
    <string name="permission_denied">YOU DENIED PERMISSION CANNOT SELECT IMAGE</string>
    <string name="complete_validate">Complete Profile</string>
</resources>